force-app/main/default/objects/eComm_Order__dll/eComm_Order__dll.object-meta.xml
<CustomObject>
    <label>eComm Order</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>