force-app/main/default/objects/eComm_Order__dll/fields/customer_number__c.field-meta.xml
<CustomField>
    <fullName>customer_number__c</fullName>
    <label>Customer Number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>customer_number</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>