force-app/main/default/objects/eComm_Order__dll/fields/delivery_method__c.field-meta.xml
<CustomField>
    <fullName>delivery_method__c</fullName>
    <label>Delivery Method</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>delivery_method</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>