force-app/main/default/objects/eComm_Order__dll/fields/Internal_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Internal_Business_Unit__c</fullName>
    <label>Internal Business Unit</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Internal_Business_Unit</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>true</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>